--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
         condition: service_healthy
     ports:
       - "8080:8080"
-    environment:
-      APP_PORT: 8080
+    env_file:
+      - web-variables.env
   mysql:
     image: mysql:latest
     container_name: mysqlDB
